tooltip.scss: do not set vertical align for span element, fixes #6559
Closes #6559

Merge request studip/studip!4986

--- a/resources/assets/stylesheets/scss/tooltip.scss
+++ b/resources/assets/stylesheets/scss/tooltip.scss
@@ -36,7 +36,6 @@
     cursor: help;
     display: inline-block;
     position: relative;
-    vertical-align: text-bottom;
 
     &.tooltip-icon {
         @include icon(before, info-circle, inactive, $icon-size-inline);
